Make HttpBodySender#body(DtoEncoding, List) generic